--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,14 @@
             <optional>true</optional>
         </dependency>
         
+        <!-- Security dependencies ==============================================================-->
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto -->
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-crypto</artifactId>
+		    <version>5.5.0</version>
+		</dependency>
+        
         <!-- Bean Validation dependency ==============================================================-->
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
         <dependency>
