Authorization header writing and reading is successful

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,15 @@
             <scope>test</scope>
         </dependency>
         
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <!-- added to mitigate inappropriate "java.net.HttpRetryException: cannot retry due to server authentication, in streaming mode" errors in test suite -->
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		    <version>4.5.13</version>
+		    <scope>test</scope>
+		</dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
