--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     username: kmatheis
     password: root
-    url: jdbc:mysql://localhost:3306/vet_api_demo
+    url: jdbc:mysql://localhost:3306/vet_api_demo?serverTimezone=America/New_York
 
 
 logging:
