--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,6 +1,11 @@
 spring:
   datasource:
     url: jdbc:h2:mem:vet_api_demo
+  jpa:
+    properties:
+      hibernate:
+        jdbc:
+          '[time_zone]': America/New_York
 
 logging:
     level:
